# Conferenti

./: .gitignore  Conferenti.sln  README.md  aspire.config.json  package-lock.json
.aspire/: settings.json
.github/: dependabot.yaml
conference-api/: README.md
conferenti-admin-api/: .dockerignore  .env.common  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
conferenti-admin-web/: .gitignore  Dockerfile  README.md
conferenti-ai-agent/: .env.dev  .gitignore  COMMANDS.md  Dockerfile  Makefile  OLLAMA_SETUP.md  QUICKSTART.md  README.md  openai_deployment_config.json  pyproject.toml  pytest.ini  requirements.txt  run-simulator.ps1  test_keyvault_setup.py
conferenti-ai-agent/aoai-api-simulator/: requirements.txt
conferenti-ai-agent/aoai-api-simulator/src/aoai_api_simulator/: app_builder.py
conferenti-ai-agent/src/conferenti_agent/: __init__.py  agent.py  auth.py  config.py  keyvault.py  main.py
conferenti-ai-agent/src/conferenti_agent/prompts/: __init__.py  sessions_prompt.py  speakers_prompts.py
conferenti-ai-agent/src/conferenti_agent/services/: api_client.py  database.py  session_service.py  speaker_service.py
conferenti-ai-agent/src/conferenti_agent/types/: ai_chat.py  ai_roles.py  session.py
conferenti-ai-agent/test/: README.md  conftest.py
conferenti-ai-agent/test/integration/: test_agent_integration.py  test_api_endpoints.py
conferenti-ai-agent/test/unit/: test_config.py  test_keyvault.py  test_speaker_service.py
conferenti-api/: .editorconfig  .gitignore  Conferenti.Api.sln  Directory.Build.props  Dockerfile  (+1 more)
(+281 files in other folders)
